--- a/src/main/java/com/grant/ListOfChanges.form
+++ b/src/main/java/com/grant/ListOfChanges.form
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.grant.ListOfChanges">
-  <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="panel" custom-create="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="15fcd" layout-manager="GridBagLayout">
+      <grid id="15fcd" binding="internalPanel" custom-create="true" layout-manager="GridBagLayout">
         <constraints border-constraint="Center"/>
         <properties>
           <preferredSize width="500" height="270"/>
@@ -33,13 +33,12 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="efa39" class="javax.swing.JTextArea" binding="textChanges">
+              <component id="efa39" class="javax.swing.JTextArea" binding="textChanges" custom-create="true">
                 <constraints/>
                 <properties>
                   <background color="-1644826"/>
                   <editable value="false"/>
                   <font size="12"/>
-                  <text value="12.01.2021 Начата разработка данного приложения&#10;19.01.2021 Скомпилирована первая Alpha версия приложения 0.1 &#10;24.01.2021 Скомпилирована Toolbox 0.2&#10;           Исправление ошибок, полный рефакторинг &#10;29.01.2021 Скомпилирована ToolBox 0.3c&#10;           Новые функции (Добавить), исправление ошибок&#10;01.02.2021 Скомпилирована ToolBox 0.4&#10;           Подправлен подсчёт кол-ва переименованных файлов"/>
                   <visible value="true"/>
                 </properties>
               </component>
