--- a/src/main/java/com/grant/View.form
+++ b/src/main/java/com/grant/View.form
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.grant.View">
-  <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+  <grid id="27dc6" binding="mainPanel" custom-create="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="1049" height="604"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="5d029" layout-manager="GridBagLayout">
+      <grid id="5d029" binding="jpanel" custom-create="true" layout-manager="GridBagLayout">
         <constraints border-constraint="Center"/>
         <properties/>
         <border type="none"/>
@@ -150,7 +150,7 @@
                 <children>
                   <component id="ada8" class="javax.swing.JTextField" binding="textFieldAdd">
                     <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                       <gridbag top="6" left="6" bottom="6" right="6" weightx="0.0" weighty="0.0"/>
@@ -162,11 +162,29 @@
                   </component>
                   <component id="3f281" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                       <gridbag top="0" left="6" bottom="0" right="6" weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
                       <text value="Добавление введеного текста в начало названия файлов и директорий"/>
+                    </properties>
+                  </component>
+                  <component id="204d1" class="javax.swing.JSpinner" binding="spinner1" custom-create="true" default-binding="true">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="6" left="6" bottom="6" right="6" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <preferredSize width="88" height="25"/>
+                    </properties>
+                  </component>
+                  <component id="4bbe3" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag top="6" left="6" bottom="6" right="6" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <text value="Место введения заданного текста (По умолчанию = 0)"/>
                     </properties>
                   </component>
                 </children>
