--- a/src/main/java/com/grant/view/Help.form
+++ b/src/main/java/com/grant/view/Help.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.grant.Help">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.grant.view.Help">
   <grid id="27dc6" binding="panelHelp" default-binding="true" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="1029" height="429"/>
